Bug 303430 - when adding a favorite via addressbar no preview is generated
Summary: when adding a favorite via addressbar no preview is generated
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9.90
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-12 18:58 UTC by Janet
Modified: 2012-07-14 13:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2012-07-12 18:58:15 UTC
When I use the "add favorite" button on the favorites' page a preview of the opened page is generated. When I open a page and then click the favorites button in the address bar, no preview is generated, the site is added to the favorites' page just with a favicon. And there doesn't seem to be a way to generate a preview for the favorite added that way.

Reproducible: Always



Expected Results:  
Adding a favorite to the favorites page via addressbar button should also generate a preview.
Comment 1 Janet 2012-07-12 19:40:13 UTC
Generating previews is possible via the tiny icon below the preview space if I start rekonq from command line...
Comment 2 Andrea Diamantini 2012-07-14 08:48:03 UTC
Janet, I truly think that a lot of the problems you reported depends on the fact you locally compiled and installed rekonq. In a safe installation, the icons to upload/remove preview are every time there below the thumbnails.
Comment 3 Andrea Diamantini 2012-07-14 08:52:05 UTC
Git commit 3dddfbf41f63722aefdbda40623a42560746e04a by Andrea Diamantini.
Committed on 14/07/2012 at 10:52.
Pushed by adjam into branch 'master'.

Save a site snapshot when adding a favorite via the urlbar

M  +4    -0    src/urlbar/urlbar.cpp

http://commits.kde.org/rekonq/3dddfbf41f63722aefdbda40623a42560746e04a
Comment 4 Janet 2012-07-14 13:34:16 UTC
thanks for fixing this