Save a site snapshot when adding a favorite via the urlbar

BUG: 303430